[tool.poetry]
name = "bgp.he.net"
version = "0.1.0"
description = ""
authors = ["Gabin Lanore <gabin.lanore@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
selenium = "^4.4.3"
rich = "^12.5.1"
stem = "^1.8.0"
typer = {extras = ["all"], version = "^0.6.1"}
beautifulsoup4 = "^4.11.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
